--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,14 @@
     {
       "src": "**/*.html",
       "use": "@vercel/static"
+    },
+    {
+      "src": "**/*.css",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "**/*.js",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
@@ -14,6 +22,14 @@
     {
       "src": "/calci.html",
       "dest": "/calci.html"
+    },
+    {
+      "src": "/(.+\\.css)$",
+      "dest": "/$1"
+    },
+    {
+      "src": "/(.+\\.js)$",
+      "dest": "/$1"
     },
     {
       "src": "/(.*)",
